--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,28 @@
+# Core
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+
+# Database
 sqlalchemy==2.0.23
 alembic==1.12.1
+psycopg2-binary==2.9.9
+
+# File upload
 python-multipart==0.0.6
 aiofiles==23.2.1
-PyPDF2==3.0.1
-python-docx==1.1.0
-scikit-learn==1.3.2
-nltk==3.8.1
+
+# Security
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+bcrypt==4.1.2
+
+# Configuration
 python-dotenv==1.0.0
 pydantic-settings==2.1.0
-psycopg2-binary==2.9.9
-bcrypt==4.1.2
-sentence-transformers==2.2.2
-faiss-cpu==1.7.4
-transformers==4.36.0
-torch==2.1.0
+
+# Basic file support
+PyPDF2==3.0.1
+python-docx==1.1.0
+
+# Simple AI без компиляции
+numpy==1.24.4
